plugins {
    id "java"
    id "application"
    id "eclipse"
    id "jacoco"
    id "org.sonarqube" version "4.4.1.3373"
    id "com.autonomousapps.dependency-analysis"  version "1.32.0"
}

repositories {
    mavenCentral()
    google()
}

jacoco {
    applyTo run
}
//version = project.providers.gradleProperty("buildNumberx").orElse("1.0-SNAPSHOT")


version = providers.environmentVariable("BUILD_NUMBER").orElse("1.0-SNAPSHOT")

dependencies {
    implementation 'com.google.guava:guava:28.1-jre'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter:5.8.2'
}

application {
    mainClass = 'se.anders_raberg.adventofcode2024.DaysMain'

    applicationDistribution.from("$projectDir/inputs") {
        into "inputs"
    }
}

project.setVersion(project.providers.environmentVariable("BUILD_NUMBER").orElse("1.0-SNAPSHOT"))
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    distZip {
    //    archiveVersion = project.providers.environmentVariable("BUILD_NUMBER").orElse("1.0-SNAPSHOT")
        outputs.cacheIf {true}
	}
}
test {
	useJUnitPlatform()
}

